--- a/trunk/doc/Demos/Decompiler/Decompiler.csproj
+++ b/trunk/doc/Demos/Decompiler/Decompiler.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -7,9 +7,11 @@
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{06EBABB7-B440-4180-8EAE-8EC4410723C4}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Decompiler</RootNamespace>
+    <RootNamespace>SolidOpt.Documentation.Samples.Decompiler</RootNamespace>
     <AssemblyName>Decompiler</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <SourceAnalysisOverrideSettingsFile>C:\Documents and Settings\Sasho\Application Data\ICSharpCode/SharpDevelop3.0\Settings.SourceAnalysis</SourceAnalysisOverrideSettingsFile>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -32,29 +34,38 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="src\" />
-    <Folder Include="src\Properties\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="src\Program.cs" />
-    <Compile Include="src\Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\core\src\vendors\Mono.Cecil\Mono.Cecil.csproj">
+    <ProjectReference Include="..\..\..\src\Services\Compatibility\SolidOpt.Services.Compatibility.csproj">
+      <Project>{846d2563-5af8-4459-81c6-59a9da174849}</Project>
+      <Name>SolidOpt.Services.Compatibility</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\src\Services\SolidOpt.Services.csproj">
+      <Project>{c41b5fb4-dae9-4a27-9d15-55109ab79660}</Project>
+      <Name>SolidOpt.Services</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\src\Services\Transformations\CodeModel\ControlFlowGraph\SolidOpt.Services.ControlFlowGraph.csproj">
+      <Project>{43A760A8-E789-4E27-A3C3-182CD847D07C}</Project>
+      <Name>SolidOpt.Services.ControlFlowGraph</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\src\Services\Transformations\Multimodel\CilToControlFlowGraph\SolidOpt.Services.CilToControlFlowGraph.csproj">
+      <Project>{3ADFD79B-EE89-4E79-85E6-33DDECC8459A}</Project>
+      <Name>SolidOpt.Services.CilToControlFlowGraph</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\src\Services\Transformations\Multimodel\SolidOpt.Services.Multimodel.csproj">
+      <Project>{02e6657d-3102-4d7e-94b5-6b38a0e34a86}</Project>
+      <Name>SolidOpt.Services.Multimodel</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\src\Services\Transformations\SolidOpt.Services.Transformations.csproj">
+      <Project>{6ea875ad-4277-4ef6-8d5c-03a0995db7fd}</Project>
+      <Name>SolidOpt.Services.Transformations</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\src\vendors\Mono.Cecil\Mono.Cecil.csproj">
       <Project>{D68133BD-1E63-496E-9EDE-4FBDBF77B486}</Project>
       <Name>Mono.Cecil</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\core\src\SolidOpt.csproj">
-      <Project>{3975D054-C5DC-4BE3-9213-B1BBC3630DC0}</Project>
-      <Name>SolidOpt</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\core\src\Services\Transformations\Multimodel\CilToControlFlowGraph\CilToControlFlowGraph.csproj">
-      <Project>{3ADFD79B-EE89-4E79-85E6-33DDECC8459A}</Project>
-      <Name>CilToControlFlowGraph</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\core\src\Services\Transformations\CodeModel\ControlFlowGraph\ControlFlowGraph.csproj">
-      <Project>{43A760A8-E789-4E27-A3C3-182CD847D07C}</Project>
-      <Name>ControlFlowGraph</Name>
-    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="src\Program.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
