--- a/trunk/doc/Demos/Optimization Methods/TestPluginService/TestPluginService.csproj
+++ b/trunk/doc/Demos/Optimization Methods/TestPluginService/TestPluginService.csproj
@@ -4,7 +4,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <OutputType>Library</OutputType>
-    <RootNamespace>TestPluginService</RootNamespace>
+    <RootNamespace>SolidOpt.Documentation.Samples.TestPluginService</RootNamespace>
     <AssemblyName>TestPluginService</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -40,9 +40,6 @@
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
   <ItemGroup>
-    <Reference Include="SolidOpt">
-      <HintPath>..\..\..\..\SolidOpt\src\bin\$(Configuration)\SolidOpt.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -53,11 +50,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IAddService.cs" />
-    <Compile Include="TestPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\IAddService.cs" />
+    <Compile Include="src\TestPlugin.cs" />
   </ItemGroup>
-  <PropertyGroup>
-    <PostBuildEvent>..\..\post-build.bat</PostBuildEvent>
-  </PropertyGroup>
+  <ItemGroup>
+    <Folder Include="src" />
+    <ProjectReference Include="..\..\..\..\src\Services\SolidOpt.Services.csproj">
+      <Project>{c41b5fb4-dae9-4a27-9d15-55109ab79660}</Project>
+      <Name>SolidOpt.Services</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
