--- a/trunk/src/Services/Transformations/CodeModel/ControlFlowGraph/SolidOpt.Services.ControlFlowGraph.csproj
+++ b/trunk/src/Services/Transformations/CodeModel/ControlFlowGraph/SolidOpt.Services.ControlFlowGraph.csproj
@@ -30,10 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="src\InstructionBlock.cs" />
-    <Compile Include="src\InstructionData.cs" />
+    <Compile Include="src\Node.cs" />
     <Compile Include="src\ExceptionHandlerData.cs" />
-    <Compile Include="src\BlockRange.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\ControlFlowGraph.cs" />
   </ItemGroup>
