--- a/trunk/src/Services/Transformations/CodeModel/ControlFlowGraph/SolidOpt.Services.ControlFlowGraph.csproj
+++ b/trunk/src/Services/Transformations/CodeModel/ControlFlowGraph/SolidOpt.Services.ControlFlowGraph.csproj
@@ -30,10 +30,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="src\Node.cs" />
+    <Compile Include="src\CfgNode.cs" />
     <Compile Include="src\ExceptionHandlerData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\ControlFlowGraph.cs" />
+    <Compile Include="src\Node.cs" />
+    <Compile Include="src\Nodes.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\vendors\Mono.Cecil\Mono.Cecil.csproj">
