--- a/trunk/doc/Demos/Optimization Methods/Inline/Inline.csproj
+++ b/trunk/doc/Demos/Optimization Methods/Inline/Inline.csproj
@@ -47,6 +47,22 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="src" />
+    <ProjectReference Include="..\..\..\..\src\Services\SolidOpt.Services.csproj">
+      <Project>{c41b5fb4-dae9-4a27-9d15-55109ab79660}</Project>
+      <Name>SolidOpt.Services</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\src\Services\Transformations\Optimizations\IL\MethodInline\SolidOpt.Services.MethodInline.csproj">
+      <Project>{9DFD76F4-C25D-4AB8-BC5F-ED932767B84D}</Project>
+      <Name>SolidOpt.Services.MethodInline</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\src\Services\Transformations\Optimizations\SolidOpt.Services.Optimizations.csproj">
+      <Project>{cccc9966-8ceb-4451-8ad4-fe48d7ad04bb}</Project>
+      <Name>SolidOpt.Services.Optimizations</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\src\Services\Transformations\SolidOpt.Services.Transformations.csproj">
+      <Project>{6ea875ad-4277-4ef6-8d5c-03a0995db7fd}</Project>
+      <Name>SolidOpt.Services.Transformations</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\..\src\vendors\Cecil.Decompiler\Cecil.Decompiler\Cecil.Decompiler.csproj">
       <Project>{ED1BE103-1699-4116-A732-616BEB142EB2}</Project>
       <Name>Cecil.Decompiler</Name>
