--- a/trunk/src/Services/Transformations/CodeModel/ControlFlowGraph/SolidOpt.Services.ControlFlowGraph.Test.csproj
+++ b/trunk/src/Services/Transformations/CodeModel/ControlFlowGraph/SolidOpt.Services.ControlFlowGraph.Test.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{BB9709D4-9C97-4A77-8F5D-391F8234D5C4}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>SolidOpt.Services.ControlFlowGraph.Test</RootNamespace>
     <AssemblyName>SolidOpt.Services.ControlFlowGraph.Test</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
