--- a/Tools/DataMorphose/trunk/src/DataMorphose.csproj
+++ b/Tools/DataMorphose/trunk/src/DataMorphose.csproj
@@ -60,8 +60,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\Table.cs" />
-    <Compile Include="Model\Row.cs" />
-    <Compile Include="Model\Column.cs" />
+    <Compile Include="Model\Record.cs" />
+    <Compile Include="Model\Field.cs" />
     <Compile Include="Controller\Import\CSVImporter.cs" />
     <Compile Include="Model\Database.cs" />
     <Compile Include="Controller\ReversibleActions\Action.cs" />
@@ -77,6 +77,7 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Data, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
