--- a/Tools/DataMorphose/trunk/src/DataMorphose.csproj
+++ b/Tools/DataMorphose/trunk/src/DataMorphose.csproj
@@ -57,11 +57,13 @@
     <Compile Include="GUI\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Model\Meta\MetaData.cs" />
+    <Compile Include="Model\Meta\Relation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\Table.cs" />
-    <Compile Include="Model\Record.cs" />
-    <Compile Include="Model\Field.cs" />
+    <Compile Include="Model\Row.cs" />
+    <Compile Include="Model\Column.cs" />
     <Compile Include="Controller\Import\CSVImporter.cs" />
     <Compile Include="Model\Database.cs" />
     <Compile Include="Controller\ReversibleActions\Action.cs" />
@@ -69,6 +71,7 @@
     <Compile Include="Controller\ReversibleActions\Actions\SortByColumnAction.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Model\Meta" />
     <Folder Include="Properties\" />
     <Folder Include="Model\" />
     <Folder Include="View\" />
